package com.misiontic.jesusmadero.modelo;

public enum EstadoPedido {
    PENDIENTE_ENTREGA, PENDIENTE_COBRAR

}
