package com.misiontic.jesusmadero.modelo;

public class OpcionPedido {
    private Integer precio;

    public OpcionPedido(Integer precio){
        this.precio = precio;
    }
    

    public Integer getPrecio() {
        return precio;
    }
}
